# desafio_nre

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  Readme.md  conftest.py  db.sqlite3  pyproject.toml  requirements.txt  tox.ini
app/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_customer_documents_alter_user_is_active.py  0003_alter_customer_documents.py
config/: db.sqlite3  pytest.ini  urls.py
config/settings/: base.py  local.py
system/: db.sqlite3
system/system/: settings.py  urls.py
system/users/: admin.py  models.py
system/users/migrations/: 0001_initial.py
test/: test_endpoints.py  test_models.py
